fix resume spacing

--- a/wp-content/themes/sage/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/sage/assets/styles/layouts/_pages.scss
@@ -38,8 +38,8 @@
         li {
           float: left;
           border-right: 1px solid $brand-primary;
-          padding-right: 8px;
-          margin-right: 8px;
+          padding-right: 6px;
+          margin-right: 6px;
           &:last-of-type {
             border-right: none;
             padding: 0;
